fix wrapping for small screens

--- a/themes/golangestonia/static/css/style.css
+++ b/themes/golangestonia/static/css/style.css
@@ -44,7 +44,7 @@ p {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-
+	flex-wrap: wrap;
 	padding: 0.5em;
 }
 
@@ -86,6 +86,7 @@ p {
 	height: 40rem;
 	max-height: 50vh;
 
+	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
